find_package(Cohda)
if(COHDA_FOUND)
    set(CXX_SOURCES mk2_descriptor.cpp)
    vanetza_module(cohda ${CXX_SOURCES})
    vanetza_module_property(cohda INCLUDE_DIRECTORIES ${COHDA_INCLUDE_DIRS})
    vanetza_intermodule_dependencies(cohda common)
else()
    message(STATUS "Skip Cohda module, Cohda SDK not found")
endif(COHDA_FOUND)

